--- a/css/general.css
+++ b/css/general.css
@@ -34,6 +34,66 @@ body {
   height: 1em;
 }
 
+/***************** Pop Ups ************************/
+.popup6 {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+
+.popup7 {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+
+.popup-box {
+  width: 35%;
+  height: 30vh;
+  padding: 10px;
+  background-color: rgb(243, 243, 243);
+  border-radius: 10px;
+  min-width: 400px;
+  min-height: 150px;
+  font-size: 1.2rem;
+}
+
+.popup-box-short {
+  width: 35%;
+  height: 25vh;
+  padding: 10px;
+  background-color: rgb(243, 243, 243);
+  border-radius: 10px;
+  min-width: 400px;
+  min-height: 150px;
+  font-size: 1.2rem;
+}
+
+.popup-msg {
+  width: 70%;
+  height: 50%;
+}
+
 /* Kevin's Stuff */
 .bottomblur {
   position: fixed;
