--- a/instruments.hbs
+++ b/instruments.hbs
@@ -22,6 +22,25 @@
 {{> realNavBar }}
 {{> signInUpModals }}
 
+<!-- Login Error Popups -->
+<div class="popup6">
+  <div class="popup-box-short">
+    <p class="text-center popup-msg mx-auto mt-3">Invalid login information, try again!</p>
+    <div class="row justify-content-center">
+      <a href="/landing.hbs" class="btn btn-pink" style="width: 80px;">Okay!</a>
+    </div>
+  </div>
+</div>
+
+<div class="popup7">
+  <div class="popup-box-short">
+    <p class="text-center popup-msg mx-auto mt-3">An account already exists with that username, try again!</p>
+    <div class="row justify-content-center">
+      <a href="/landing.hbs" class="btn btn-pink" style="width: 80px;">Okay!</a>
+    </div>
+  </div>
+</div>
+
 <div class="main-img">
     <h1 class="main-title mb-0 pt-5">Instruments</h1>
 </div>
