--- a/landing.hbs
+++ b/landing.hbs
@@ -29,6 +29,25 @@
     </div>
 </div>
 
+<!-- Login Error Popups -->
+<div class="popup6">
+  <div class="popup-box-short">
+    <p class="text-center popup-msg mx-auto mt-3">Invalid login information, try again!</p>
+    <div class="row justify-content-center">
+      <a href="/landing.hbs" class="btn btn-pink" style="width: 80px;">Okay!</a>
+    </div>
+  </div>
+</div>
+
+<div class="popup7">
+  <div class="popup-box-short">
+    <p class="text-center popup-msg mx-auto mt-3">An account already exists with that username, try again!</p>
+    <div class="row justify-content-center">
+      <a href="/landing.hbs" class="btn btn-pink" style="width: 80px;">Okay!</a>
+    </div>
+  </div>
+</div>
+
 <div class="bd-example">
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
