--- a/css/general.css
+++ b/css/general.css
@@ -41,7 +41,7 @@ body {
   height: 100vh;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 20000;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
@@ -57,7 +57,23 @@ body {
   height: 100vh;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 20000;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+
+.popup8 {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 20000;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
